logs/rabbitrpc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rabbitrpc'...
Listing './lib/python3.5/site-packages/rabbitrpc/client'...
Compiling './lib/python3.5/site-packages/rabbitrpc/client/rpcclient.py'...
***   File "./lib/python3.5/site-packages/rabbitrpc/client/rpcclient.py", line 272
    exec new_function in module.__dict__
                    ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/rabbitrpc/examples'...
Listing './lib/python3.5/site-packages/rabbitrpc/examples/client'...
Compiling './lib/python3.5/site-packages/rabbitrpc/examples/client/client.py'...
***   File "./lib/python3.5/site-packages/rabbitrpc/examples/client/client.py", line 35
    print 'result: %s' % result
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rabbitrpc/examples/server'...
Listing './lib/python3.5/site-packages/rabbitrpc/rabbitmq'...
Listing './lib/python3.5/site-packages/rabbitrpc/server'...
Listing './lib/python3.5/site-packages/rabbitrpc-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
